@@ -771,16 +771,13 @@ public:
      static const wxArrayString& GetAvailableFontNames();
      static void ClearAvailableFontNames();
 
+     // FIXME: this does not work, it allows this code to compile but will fail
+     //        during run-time
 #ifdef __WXMSW__
     virtual WXHWND GetEditHWND() const { return GetHWND(); }
 #endif
 #ifdef __WXGTK__
-    // implement this to return the associated window, it will be used for
-    // event generation
-    virtual const wxWindow *GetEditableWindow() const { return NULL; }
-
-    // implement this to return the associated GtkEntry or another widget
-    // implementing GtkEditable
+    virtual const wxWindow *GetEditableWindow() { return this; }
     virtual GtkEditable *GetEditable() const { return NULL; }
 #endif
 
